cmake_minimum_required(VERSION 3.18)  # for CMAKE_CUDA_ARCHITECTURES

find_package(CUDAToolkit)

if (CUDAToolkit_FOUND)
    message(STATUS "CUDA Toolkit found")

    if (NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
        # native == GPUs available at build time
        # 50     == Maxwell, lowest CUDA 12 standard
        # 60     == P100, FP16 CUDA intrinsics
        # 61     == Pascal, __dp4a instruction (per-byte integer dot product)
        # 70     == V100, FP16 tensor cores
        # 75     == Turing, int8 tensor cores
        # 80     == Ampere, asynchronous data loading, faster tensor core instructions
        # 86     == RTX 3000, needs CUDA v11.1
        # 89     == RTX 4000, needs CUDA v11.8
        # 120    == Blackwell, needs CUDA v12.8, FP4 tensor cores
        #
        # XX-virtual == compile CUDA code as PTX, do JIT compilation to binary code on first run
        # XX-real    == compile CUDA code as device code for this specific architecture
        # no suffix  == compile as both PTX and device code
        #
        # The default behavior for a non-native is to build virtual architectures as needed to cover all features needed
        #     for best performance and to also build real architectures for the most commonly used GPUs.
        if (GGML_NATIVE AND CUDAToolkit_VERSION VERSION_GREATER_EQUAL "11.6" AND CMAKE_VERSION VERSION_GREATER_EQUAL "3.24")
            set(CMAKE_CUDA_ARCHITECTURES "native")
        else()
            if (CUDAToolkit_VERSION VERSION_LESS "13")
                list(APPEND CMAKE_CUDA_ARCHITECTURES 50-virtual 61-virtual 70-virtual)
            endif ()

            list(APPEND CMAKE_CUDA_ARCHITECTURES 75-virtual 80-virtual 86-real)

            if (CUDAToolkit_VERSION VERSION_GREATER_EQUAL "11.8")
                list(APPEND CMAKE_CUDA_ARCHITECTURES 89-real)
            endif()

            if (CUDAToolkit_VERSION VERSION_GREATER_EQUAL "12.8")
                # The CUDA architecture 120f-virtual would in principle work for Blackwell support
                #     but the newly added "f" suffix conflicted with a preexising regex for validating CUDA architectures in CMake.
                # So either a recent CMake version or one with the backported fix is needed.
                # The following versions should work:
                #   - CMake >= v3.31.8 && CMake < v4.0.0
                #   - CMake >= v4.0.2
                # This is NOT documented in the CMake release notes,
                #     check Modules/Internal/CMakeCUDAArchitecturesValidate.cmake in the CMake git repository instead.
                # However, the architectures 120a-real and 121a-real should work with basically any CMake version and
                #     until the release of e.g. Rubin there is no benefit to shipping virtual architectures for Blackwell.
                list(APPEND CMAKE_CUDA_ARCHITECTURES 120a-real)
            endif()
            if (CUDAToolkit_VERSION VERSION_GREATER_EQUAL "12.9")
                list(APPEND CMAKE_CUDA_ARCHITECTURES 121a-real)
            endif()
        endif()
    endif()

    enable_language(CUDA)

    # For Clang/ILUVATAR CUDA compiler (Iluvatar CoreX), override default nvcc flags
    # CMake may detect the compiler as "ILUVATAR" or "Clang" depending on context
    if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
        # Clear nvcc-specific default flags that CMake adds
        set(CMAKE_CUDA_COMPILE_OPTIONS "")
        # Set appropriate flags for Clang CUDA
        set(CMAKE_CUDA_FLAGS "--cuda-path=/usr/local/corex")
    endif()

    # TODO: Remove once CCCL 3.2 has been released and bundled with CUDA Toolkit
    if (GGML_CUDA_CUB_3DOT2)
        include(FetchContent)

        FetchContent_Declare(
            CCCL
            GIT_REPOSITORY https://github.com/nvidia/cccl.git
            GIT_TAG        v3.2.0
            GIT_SHALLOW    TRUE
        )

        FetchContent_MakeAvailable(CCCL)
    endif()

    # Replace any plain 12X CUDA architectures with their "architecture-specific" equivalents 12Xa.
    # 12X is forwards-compatible, 12Xa is not.
    # Notably the Blackwell FP4 tensor core instructions are not forwards compatible and therefore need 12Xa.
    # But while 12X vs. 12Xa can be checked in device code there is (to my knowledge) no easy way to do the same check in host code.
    # So for now just replace all instances of 12X with 12Xa, this should be fine until Rubin is released.
    foreach(ARCHS IN ITEMS CMAKE_CUDA_ARCHITECTURES CMAKE_CUDA_ARCHITECTURES_NATIVE)
        set(FIXED_ARCHS "")
        foreach(ARCH IN LISTS ${ARCHS})
            if (ARCH MATCHES "^12[0-9](-real|-virtual)?$")
                string(REGEX REPLACE "^(12[0-9])((-real|-virtual)?)$" "\\1a\\2" FIXED_ARCH ${ARCH})
                message(STATUS "Replacing ${ARCH} in ${ARCHS} with ${FIXED_ARCH}")
                list(APPEND FIXED_ARCHS "${FIXED_ARCH}")
            else()
                list(APPEND FIXED_ARCHS "${ARCH}")
            endif()
        endforeach()
        set(${ARCHS} ${FIXED_ARCHS})
    endforeach()

    # If we try to compile a "native" build it will use the 12X architectures and fail.
    # So we should instead use the native architectures as determined by CMake after replacing 12X with 12Xa.
    # But if at the time of the build no GPUs are connected at all CMAKE_CUDA_ARCHITECTURES will contain garbage that we should not use.
    if (CMAKE_CUDA_ARCHITECTURES STREQUAL "native" AND CMAKE_CUDA_ARCHITECTURES_NATIVE MATCHES "^[0-9]+(a|f)?(-real|-virtual)?(;[0-9]+(a|f)?(-real|-virtual)?|;)*$")
        set(CMAKE_CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES_NATIVE})
    endif()
    message(STATUS "Using CMAKE_CUDA_ARCHITECTURES=${CMAKE_CUDA_ARCHITECTURES} CMAKE_CUDA_ARCHITECTURES_NATIVE=${CMAKE_CUDA_ARCHITECTURES_NATIVE}")

    file(GLOB   GGML_HEADERS_CUDA "*.cuh")
    list(APPEND GGML_HEADERS_CUDA "../../include/ggml-cuda.h")

    file(GLOB   GGML_SOURCES_CUDA "*.cu")

    # Check if using Clang/ILUVATAR as CUDA compiler early for file exclusion
    # Iluvatar CoreX SDK has issues with complex CUDA kernels (CFG annotation, SGPR spill)
    if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
        # Exclude flash attention files - CoreX SDK cannot handle complex CFG
        list(FILTER GGML_SOURCES_CUDA EXCLUDE REGEX "fattn.*\\.cu$")
        # Exclude matrix multiplication quantization files - SGPR spill issues
        list(FILTER GGML_SOURCES_CUDA EXCLUDE REGEX "mmq\\.cu$")
        list(FILTER GGML_SOURCES_CUDA EXCLUDE REGEX "mmvq\\.cu$")
        list(FILTER GGML_SOURCES_CUDA EXCLUDE REGEX "mmf\\.cu$")
        list(FILTER GGML_SOURCES_CUDA EXCLUDE REGEX "mmid\\.cu$")
        list(FILTER GGML_SOURCES_CUDA EXCLUDE REGEX "mmv\\.cu$")
        # Add stub implementations for excluded functions
        list(APPEND GGML_SOURCES_CUDA "iluvatar-stubs.cu")
        message(STATUS "Iluvatar build: excluding flash attention and matrix mul quant files due to SDK compiler limitations")
    endif()

    file(GLOB   SRCS "template-instances/fattn-tile*.cu")
    # Skip fattn template files for Iluvatar
    if (NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
        list(APPEND GGML_SOURCES_CUDA ${SRCS})
    endif()
    file(GLOB   SRCS "template-instances/fattn-mma*.cu")
    if (NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
        list(APPEND GGML_SOURCES_CUDA ${SRCS})
    endif()
    file(GLOB   SRCS "template-instances/mmq*.cu")
    # Skip mmq template files for Iluvatar
    if (NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
        list(APPEND GGML_SOURCES_CUDA ${SRCS})
    endif()
    file(GLOB   SRCS "template-instances/mmf*.cu")
    if (NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
        list(APPEND GGML_SOURCES_CUDA ${SRCS})
    else()
        # Also exclude mmv template files for Iluvatar
        file(GLOB   SRCS_MMV "template-instances/mmv*.cu")
        list(FILTER GGML_SOURCES_CUDA EXCLUDE REGEX "mmv.*\\.cu$")
    endif()

    if (GGML_CUDA_FA_ALL_QUANTS)
        file(GLOB   SRCS "template-instances/fattn-vec*.cu")
        if (NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
            list(APPEND GGML_SOURCES_CUDA ${SRCS})
        endif()
        add_compile_definitions(GGML_CUDA_FA_ALL_QUANTS)
    else()
        if (NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
            list(APPEND GGML_SOURCES_CUDA
                template-instances/fattn-vec-instance-f16-f16.cu
                template-instances/fattn-vec-instance-q4_0-q4_0.cu
                template-instances/fattn-vec-instance-q8_0-q8_0.cu
                template-instances/fattn-vec-instance-bf16-bf16.cu)
        endif()
    endif()

    ggml_add_backend_library(ggml-cuda
                             ${GGML_HEADERS_CUDA}
                             ${GGML_SOURCES_CUDA}
                            )

    add_compile_definitions(GGML_CUDA_PEER_MAX_BATCH_SIZE=${GGML_CUDA_PEER_MAX_BATCH_SIZE})

    if (GGML_CUDA_GRAPHS)
        add_compile_definitions(GGML_CUDA_USE_GRAPHS)
    endif()

    if (GGML_CUDA_FORCE_MMQ)
        add_compile_definitions(GGML_CUDA_FORCE_MMQ)
    endif()

    if (GGML_CUDA_FORCE_CUBLAS)
        add_compile_definitions(GGML_CUDA_FORCE_CUBLAS)
    endif()

    if (GGML_CUDA_NO_VMM)
        add_compile_definitions(GGML_CUDA_NO_VMM)
    endif()

    if (NOT GGML_CUDA_FA OR (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
        # Flash attention disabled by user, or automatically disabled for Iluvatar
        add_compile_definitions(GGML_CUDA_NO_FA)
    endif()

    if (GGML_CUDA_NO_PEER_COPY)
        add_compile_definitions(GGML_CUDA_NO_PEER_COPY)
    endif()

    if (GGML_STATIC)
        if (WIN32)
            # As of 12.3.1 CUDA Toolkit for Windows does not offer a static cublas library
            target_link_libraries(ggml-cuda PRIVATE CUDA::cudart_static CUDA::cublas)
        else ()
            if (GGML_CUDA_CUB_3DOT2)
                target_link_libraries(ggml-cuda PRIVATE  CCCL::CCCL)
            endif()
            if (CUDAToolkit_VERSION VERSION_GREATER_EQUAL "10.1")
                target_link_libraries(ggml-cuda PRIVATE  CUDA::cudart_static CUDA::cublas_static CUDA::cublasLt_static)
            else()
                target_link_libraries(ggml-cuda PRIVATE  CUDA::cudart_static CUDA::cublas_static)
            endif()
        endif()
    else()
        if (GGML_CUDA_CUB_3DOT2)
            target_link_libraries(ggml-cuda PRIVATE  CCCL::CCCL)
        endif()
        target_link_libraries(ggml-cuda PRIVATE CUDA::cudart CUDA::cublas)
    endif()

    if (GGML_CUDA_NO_VMM)
        # No VMM requested, no need to link directly with the cuda driver lib (libcuda.so)
    else()
        target_link_libraries(ggml-cuda PRIVATE CUDA::cuda_driver)
    endif()

    if (GGML_CUDA_NCCL)
        find_package(NCCL)
        if (NCCL_FOUND)
            add_compile_definitions(GGML_USE_NCCL)
            target_link_libraries(ggml-cuda PRIVATE NCCL::NCCL)
        else()
            message(STATUS "Warning: NCCL not found, performance for multiple CUDA GPUs will be suboptimal")
        endif()
    endif()

    set(CUDA_CXX_FLAGS "")

    # Check if using Clang/ILUVATAR as CUDA compiler (for Iluvatar/CoreX compatibility)
    # CMake may identify the compiler as "Clang" or "ILUVATAR" depending on detection phase
    if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
        # Clang CUDA compiler (Iluvatar CoreX) - use ivcore language
        set(CUDA_FLAGS --cuda-path=/usr/local/corex)
        # Add ivcore-specific flags
        list(APPEND CUDA_FLAGS -x ivcore)
        # Enable C++17 for CUDA code (required for constexpr if, std::is_same_v, etc.)
        list(APPEND CUDA_FLAGS -std=c++17)
        # Define ILUVATAR macro for conditional compilation
        add_compile_definitions(GGML_USE_ILUVATAR __ILUVATAR__)
        # Clang does not support nvcc-specific flags like -extended-lambda
    else()
        # NVIDIA nvcc compiler
        set(CUDA_FLAGS -use_fast_math -extended-lambda)
    endif()

    if (GGML_CUDA_DEBUG)
        if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
            # Clang debug flags
            list(APPEND CUDA_FLAGS -g)
        else()
            list(APPEND CUDA_FLAGS -lineinfo)
        endif()
        add_compile_definitions(GGML_CUDA_DEBUG)
    endif()

    if (CUDAToolkit_VERSION VERSION_GREATER_EQUAL "12.8" AND NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
        # Options are:
        # - none (not recommended)
        # - speed (nvcc's default)
        # - balance
        # - size
        list(APPEND CUDA_FLAGS -compress-mode=${GGML_CUDA_COMPRESSION_MODE})
    endif()

    if (GGML_FATAL_WARNINGS)
        if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
            list(APPEND CUDA_FLAGS -Werror)
        else()
            list(APPEND CUDA_FLAGS -Werror all-warnings)
        endif()
    endif()

    if (GGML_ALL_WARNINGS AND NOT MSVC)
        set(NVCC_CMD ${CMAKE_CUDA_COMPILER} .c)
        if (NOT CMAKE_CUDA_HOST_COMPILER STREQUAL "")
            list(APPEND NVCC_CMD -ccbin ${CMAKE_CUDA_HOST_COMPILER})
        endif()

        execute_process(
            COMMAND ${NVCC_CMD} -Xcompiler --version
            OUTPUT_VARIABLE CUDA_CCFULLVER
            ERROR_QUIET
        )

        if (NOT CUDA_CCFULLVER MATCHES clang)
            set(CUDA_CCID "GNU")
            execute_process(
                COMMAND ${NVCC_CMD} -Xcompiler "-dumpfullversion -dumpversion"
                OUTPUT_VARIABLE CUDA_CCVER
                ERROR_QUIET
                OUTPUT_STRIP_TRAILING_WHITESPACE
            )
        else()
            if (CUDA_CCFULLVER MATCHES Apple)
                set(CUDA_CCID "AppleClang")
            else()
                set(CUDA_CCID "Clang")
            endif()
            string(REGEX REPLACE "^.* version ([0-9.]*).*$" "\\1" CUDA_CCVER ${CUDA_CCFULLVER})
        endif()

        message(STATUS "CUDA host compiler is ${CUDA_CCID} ${CUDA_CCVER}")

        ggml_get_flags(${CUDA_CCID} ${CUDA_CCVER})
        if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
            # For Clang CUDA compiler, add flags directly (no -Xcompiler needed)
            list(APPEND CUDA_FLAGS ${CXX_FLAGS} ${GF_CXX_FLAGS})
        else()
            list(APPEND CUDA_CXX_FLAGS ${CXX_FLAGS} ${GF_CXX_FLAGS})  # This is passed to -Xcompiler later
        endif()
    endif()

    if (NOT MSVC)
        if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
            # For Clang CUDA compiler, add flags directly
            list(APPEND CUDA_FLAGS -Wno-pedantic)
        else()
            list(APPEND CUDA_CXX_FLAGS -Wno-pedantic)
        endif()
    else()
        # CCCL 3.2 onwards will require a cpp-standard-compliant preprocessor for MSVC
        # https://github.com/NVIDIA/cccl/pull/6827
        list(APPEND CUDA_CXX_FLAGS /Zc:preprocessor)
    endif()

    # For nvcc, join CXX flags and pass via -Xcompiler
    if (NOT (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR"))
        list(JOIN   CUDA_CXX_FLAGS " " CUDA_CXX_FLAGS_JOINED)  # pass host compiler flags as a single argument
        if (NOT CUDA_CXX_FLAGS_JOINED STREQUAL "")
            list(APPEND CUDA_FLAGS -Xcompiler ${CUDA_CXX_FLAGS_JOINED})
        endif()
    endif()

    target_compile_options(ggml-cuda PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:${CUDA_FLAGS}>")

    # For Clang/ILUVATAR CUDA compiler, remove nvcc-specific flags that CMake adds by default
    if (CMAKE_CUDA_COMPILER_ID STREQUAL "Clang" OR CMAKE_CUDA_COMPILER_ID STREQUAL "ILUVATAR")
        # Remove nvcc-specific flags that Clang doesn't support
        # These flags are added by CMake's CUDA support but are nvcc-specific
        get_target_property(_current_cuda_flags ggml-cuda CUDA_COMPILE_OPTIONS)
        if (_current_cuda_flags)
            list(REMOVE_ITEM _current_cuda_flags "-use_fast_math" "-extended-lambda")
            set_target_properties(ggml-cuda PROPERTIES CUDA_COMPILE_OPTIONS "${_current_cuda_flags}")
        endif()
        # Also try to remove via compile options
        target_compile_options(ggml-cuda PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:-fno-fast-math>")
        # Iluvatar CoreX SDK requires disabling Tail Call and Sibling Call optimizations
        # These optimizations create complex CFG that the SDK's llc cannot handle
        # Use SHELL: prefix to keep -mllvm arguments grouped together
        target_compile_options(ggml-cuda PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:SHELL:-fno-optimize-sibling-calls>")
        # Enable Iluvatar function call optimization (required for GPU function calls)
        target_compile_options(ggml-cuda PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:SHELL:-mllvm -iluvatar-function-calls=true>")
        # Enable SGPR spill to SMEM when SGPR limit reached
        target_compile_options(ggml-cuda PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:SHELL:-mllvm --iluvatar-spill-sgpr-to-smem>")
    endif()
else()
    message(FATAL_ERROR "CUDA Toolkit not found")
endif()
